# mas-flwr-cifar100

./: .gitignore  README.md  download_cifar100_dataset.py  environment.yml  plot_class_distributions.py  plot_metrics.py  pyproject.toml
src/: __init__.py  client_app.py  data.py  decentralized_sim.py  logger.py  model.py  plot_metrics.py  server_app.py  train.py  utils.py
src/agents/: __init__.py  aggregation_agent.py  compute_agent.py  storage_agent.py
