[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mas-flwr-cifar100"
version = "0.1.0"
description = "Multi-agent federated learning system for CIFAR-100 using Flower"
authors = [
  { name = "Sergey" }
]
requires-python = ">=3.10"

dependencies = [
  "flwr>=1.26.0",
  "torch",
  "torchvision",
  "numpy",
  "matplotlib",
  "datasets",
  "huggingface_hub"
]

[tool.flwr.app]
publisher = "sergey"

[tool.flwr.app.components]
serverapp = "src.server_app:app"
clientapp = "src.client_app:app"

[tool.flwr.app.config]

# количество раундов FL
num-server-rounds = 15

# количество клиентов
num-clients = 10

# доля участвующих клиентов
fraction-fit = 1.0
fraction-evaluate = 1.0

min-fit-clients = 10
min-evaluate-clients = 10
min-available-clients = 10

# параметры локального обучения
batch-size = 64
local-epochs = 1
learning-rate = 0.001



#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]

# # делаем локальную симуляцию дефолтной
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 10

# [tool.flwr.federations.local-simulation.backend]
# name = "ray"

# [tool.flwr.federations.local-simulation.backend.client-resources]
# num-cpus = 2
# num-gpus = 0.1